modification of Response entity (old) => Reply , adding PersonSurveyed with relation OneToMany Reply, create function to start consultation process

--- a/templates/front_survey/front_survey.html.twig
+++ b/templates/front_survey/front_survey.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ current_survey.name }} {% endblock %}
 
 {% block body %}
-    <h1>{{ current_survey.name }}</h1>
+
+     {{ form(form) }}
 {% endblock %}
