--- a/templates/front_survey/front_survey.html.twig
+++ b/templates/front_survey/front_survey.html.twig
@@ -2,6 +2,7 @@
 
 
 {% block body %}
-
-     {{ form(form) }}
+    <div class="container pt-4 d-flex p-2">
+        {{ form(form) }}
+    </div>
 {% endblock %}
