--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,19 +11,21 @@
         <p>{{lastAuthenticationError.messageKey | trans(lastAuthenticationError.messagedata, 'security') }}</p>
       </div>
     {% endif %}
-
-     <form action="{{ path('login') }}" method="post">
+    <div class="h-80vh d-flex justify-content-center align-items-center" >
+     <form id="login_form" action="{{ path('login') }}" method="post">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+          <label for="exampleInputEmail1">Adresse Email</label>
           <input type="email"  value="{{ lastUsername }}" name="_username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre e-mail avec quelqu'un d'autre.</small>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
+          <label for="exampleInputPassword1">Mots de passe</label>
           <input type="password" name="_password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Se connecter</button>
+        <div class="form-group d-flex justify-content-center">
+          <button type="submit" class="login_submit btn btn-info ">Se connecter</button>
+        </div>
       </form>
-
+    <div>
   </div>
 {% endblock %} 
