--- a/templates/survey/index.html.twig
+++ b/templates/survey/index.html.twig
@@ -3,19 +3,25 @@
 {% block title %}Questionnaire{% endblock %}
 
   {% block body %}
-  <div class="container pt-4">
+  <div class="container pt-5">
      
       {% if surveys|length > 0 %}
         {% for survey in surveys %}
-            <p>{{ survey.id }} | {{ survey.name }} 
-              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" class="btn btn-danger">Supprimer le Questionnaire</a>
+            <div class="survey_section d-flex justify-content-between" >
+             <div>
+              {{ survey.name }} 
+              <i class="fas fa-angle-right"></i>
+             </div>
+              <div>
+              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" class="btn btn-danger">Supprimer</a>
               <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" class="btn btn-warning">Ajouter une question</a>
               <a href="{{ path( 'show_survey_page',{'id': survey.id})}}" class="btn btn-success">Visualiser le Questionnaire</a>
-            </p>
+              </div>
+            </div>
            
         {% endfor %}
       {% endif %}
-
-      <a href="{{ path('create_survey_page')}}" class="btn btn-primary"> Créer un nouveau questionnaire</a>
+      <a href="{{ path('create_survey_page')}}" class="btn btn-info btn_add_survey">+</a>
+      
   </div>
   {% endblock %}
