--- a/templates/survey/show.html.twig
+++ b/templates/survey/show.html.twig
@@ -5,15 +5,16 @@
 {% block body %}
 <div class="container pt-4">
     {% for field_survey in current_survey.fieldSurveys %}
-        <p>{{ field_survey.id }} | {{ field_survey.question }}</p>
-
-        {% if app.request.get('_route') == 'show_survey_page' %}
-            <a href="{{ path( 'delete_field',{'id': field_survey.id} )}}" class="btn btn-danger">Supprimer</a>
-        {% endif %}
+     <div class="survey_section d-flex justify-content-between" >
+        <div>
+         {{ field_survey.question }} ?
+        </div>
+            <div>
+                <a href="{{ path( 'delete_field',{'id': field_survey.id} )}}" class="btn btn-danger">Supprimer</a>
+            </div>
+        </div>
 
     {% endfor %}
-    {% if app.request.get('_route') == 'show_survey_page' %}
-        <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" class="btn btn-success">Ajouter une Question</a>
-    {% endif %}
+    <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" class="btn btn-info btn_add_survey">+</a>
 </div>   
 {% endblock %}
