--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand" href=" {{ path('home') }} ">Logo</a>
+
+    {% if app.user %}
+        <a class="navbar-brand" href=" {{ path('home') }} "><img style="max-height: 46px !important;" src="{{ asset('/img/custom/logos/' ~ app.user.personalization.imageName) }}"/></a>
+    {% endif %}
+    {% if app.user == false %}
+        <a class="navbar-brand" href=" {{ path('home') }} ">Logo</a>
+    {% endif %}
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +20,7 @@
                 <a class="nav-link" href="{{ path('survey') }}">Questionnaires<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Personnalisation<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('personalization') }}">Personnalisation<span class="sr-only">(current)</span></a>
             </li>
         </ul>
         {% if app.user %}
@@ -32,3 +39,4 @@
     {% endif %}
     </div>
 </nav>
+
