--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,22 +5,25 @@
 {% block body %}
 
   <div class="container mt-6 pt-4">
-    
+
     {% if lastAuthenticationError %}
       <div class="allert alert-danger">
         <p>{{lastAuthenticationError.messageKey | trans(lastAuthenticationError.messagedata, 'security') }}</p>
       </div>
     {% endif %}
+
     <div class="h-80vh d-flex justify-content-center align-items-center" >
+     
      <form id="login_form" action="{{ path('login') }}" method="post">
+        <h1>Connexion</h1>
         <div class="form-group">
           <label for="exampleInputEmail1">Adresse Email</label>
-          <input type="email"  value="{{ lastUsername }}" name="_username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre e-mail avec quelqu'un d'autre.</small>
+          <input type="email"  placeholder="toto@exemple.com" value="{{ lastUsername }}" name="_username" class="form-control span12 " id="exampleInputEmail1" aria-describedby="emailHelp">
+          <small id="emailHelp"  class="form-text text-muted">Nous ne partagerons jamais votre e-mail avec quelqu'un d'autre.</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Mots de passe</label>
-          <input type="password" name="_password" class="form-control" id="exampleInputPassword1">
+          <input type="password" placeholder="Entrer votre mots de passe" name="_password" class="form-control span12" id="exampleInputPassword1">
         </div>
         <div class="form-group d-flex justify-content-center">
           <button type="submit" class="login_submit btn btn-info ">Se connecter</button>
