--- a/templates/survey/index.html.twig
+++ b/templates/survey/index.html.twig
@@ -3,25 +3,26 @@
 {% block title %}Questionnaire{% endblock %}
 
   {% block body %}
-  <div class="container pt-5">
-     
+  <div class="container pt-4">
+
       {% if surveys|length > 0 %}
+      
         {% for survey in surveys %}
-            <div class="survey_section d-flex justify-content-between" >
+            <div class="section_display d-flex justify-content-between  align-items-center" >
              <div>
-              {{ survey.name }} 
-              <i class="fas fa-angle-right"></i>
+              <p>{{ survey.name }} </p>
              </div>
               <div>
-              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" class="btn btn-danger">Supprimer</a>
-              <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" class="btn btn-warning">Ajouter une question</a>
-              <a href="{{ path( 'show_survey_page',{'id': survey.id})}}" class="btn btn-success">Visualiser le Questionnaire</a>
+              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
+              <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" ><i class="fa fa-plus" style="font-size:24px;color:green;margin-left:1em;"></i> </a>
+              <a href="{{ path( 'show_survey_page',{'id': survey.id})}}" ><i class="fa fa-eye" style="font-size:24px;color:grey;margin-left:1em;"></i></a>
               </div>
             </div>
            
         {% endfor %}
       {% endif %}
-      <a href="{{ path('create_survey_page')}}" class="btn btn-info btn_add_survey">+</a>
+   
+      <a href="{{ path('create_survey_page')}}" id="btn_add_survey" class="btn btn-info btn_add_survey">+</a>
       
   </div>
   {% endblock %}
