--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,7 +26,7 @@
           <input type="password" placeholder="Entrer votre mots de passe" name="_password" class="form-control span12" id="exampleInputPassword1">
         </div>
         <div class="form-group d-flex justify-content-center">
-          <button type="submit" class="login_submit btn btn-info ">Se connecter</button>
+          <button type="submit" class="login_submit btn btn-info color_theme">Se connecter</button>
         </div>
       </form>
     <div>
