--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,6 @@
-@import '~@fortawesome/fontawesome-free/css/all.css';
 
 .h-80vh{
     height: 80vh;
-}
-
-a:hover{
-    text-decoration: none;
 }
 
 /***LOGIN_FORM****/
@@ -54,7 +49,7 @@ a:hover{
 }
 
 
-/**FIEL FORM*/
+/**FIELD FORM*/
 #field_survey_question{
     width:100%;
     border-radius: .25em;
@@ -62,7 +57,11 @@ a:hover{
     border: .5px solid rgb(169, 169, 169);
 
 }
-#field_survey div{
+#location_element_added label span{
+    font-size:.9em;
+    color:grey;
+}
+form[name='field_survey'] div{
     margin-bottom: 4em;
 }
 form[name='field_survey'] button{
@@ -77,7 +76,34 @@ form[name='field_survey'] button{
     width:100%;
 }
 #login_reply div{
-    margin-bottom: 3em;
+    margin-bottom: 2.5em;
+}
+#login_reply label{
+    font-weight: 500;
+}
+#login_reply .allFrontCheckbox{
+    margin-left: 2em;
+}
+#login_reply .allFrontRadio{
+    margin-left: 2em;
+}
+#login_reply .allFrontCheckbox{
+    margin-bottom: 0;
+    width: 100%;
+}
+#login_reply .allFrontCheckbox div{
+    margin-bottom: 0;
+}
+#login_reply .custom-control-label{
+    margin-right: 3em;
+    font-weight: normal;
+}
+#login_reply .allFrontRadio{
+    margin-bottom: 0;
+    width: 100%;
+}
+#login_reply .allFrontRadio div{
+    margin-bottom: 0;
 }
 .field_form{
     width:100%;
@@ -86,18 +112,15 @@ form[name='field_survey'] button{
     border: .5px solid rgb(169, 169, 169);
 }
 
-
-
-
 .home{
-     min-height: calc(100vh - 93px);
+     min-height: calc(100vh - 70px);
      width: 100vw;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
  }
  .home_filter{
-    min-height: calc(100vh - 93px);
+    min-height: calc(100vh - 70px);
     background: linear-gradient(135deg, rgba(82, 180, 195, 0.03), rgba(82, 180, 195, 0.03), 60%, rgba(13,88,99, 0.2));
 }
 .home_container{
@@ -152,4 +175,23 @@ form[name="registration_form"]{
     border-radius: .25em;
     padding: 2em 2em 1em 2em;
     width: 430px;
+}
+
+
+/**Form Personalization**/
+.vich-image {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+.vich-image .form-group{
+    flex: 0 0 100%;
+}
+.vich-image a:last-child{
+    display: none;
+}
+
+
+.container h3{
+    margin-bottom: 1.5em;
 }
