--- a/templates/partials/_form.html.twig
+++ b/templates/partials/_form.html.twig
@@ -1,6 +1,9 @@
 {{ form_start(form) }}
     <div class="form-group">
         {{ form_widget(form) }}
-        <button class="btn btn-info">{{ button_label|default('Save') }}</button>
+      
+    </div>
+    <div class="form-group d-flex justify-content-center">
+        <button class="btn btn-info color_theme">{{ button_label|default('Save') }}</button>
     </div>
 {{ form_end(form) }}
