--- a/templates/survey/form.html.twig
+++ b/templates/survey/form.html.twig
@@ -3,8 +3,8 @@
  {% block title %}Créer un nouveau Questionnaire{% endblock %}
 
  {% block body %}
-   <div class="container pt-4">
-      <h3>Formulaire d'annonce</h3>
+   <div class="container pt-5">
+      <h3>Formulaire de création de questionnaire</h3>
 
       <div class="contaire">
          {{ include('partials/_form.html.twig',  {'button_label': 'Créer'}) }}
