--- a/templates/survey/show.html.twig
+++ b/templates/survey/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %} {{ current_survey.name }} {% endblock %}
 
 {% block body %}
-<div class="container pt-4">
+<div class="container pt-5">
     {% for field_survey in current_survey.fieldSurveys %}
      <div class="section_display d-flex justify-content-between  align-items-center" >
         <div>
@@ -16,7 +16,7 @@
 
     {% endfor %}
     
-    <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" id="btn_add_field_survey" class="btn btn-info btn_add_survey">+</a>
+    <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" id="btn_add_field_survey" class="btn btn-info color_theme btn_add_survey">+</a>
     {# <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" class="btn btn-info btn_add_survey"><i class="fa fa-plus" style="font-size:36px;font-weight:500"></i></a> #}
     
 
