--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -6,8 +6,14 @@
       <div class="home_filter"></div>
       <div class="container home_container" >
 
-        <h1 class="text-dark">Plateforme de création de formulaire</h1>
-        <h2 class="text-secondary">Spécialisé pour les Professionnels</h2>
+        <h1 class="text-dark">Plateforme de création de formulaire en ligne</h1>
+        <div class="container_text_secondary">
+          <p class="text-secondary">Professionnels, étudiants ?</p>
+          <p class="text-secondary">Vous avez besoin de faire des sondages ?</p>
+          <p class="text-secondary">La plateforme « CWA formulaire » est faite pour vous !</p>
+          <p class="text-secondary">Créez autant de formulaire que vous souhaitez.</p>
+          <p class="text-secondary">C’est SIMPLE, RAPIDE et GRATUIT.</p>
+        </div>
           
         <div class="home_section_btn d-flex justify-content-between">
             <a href="{{ path('app_register')}}" class="btn_creation">Créer un compte</a>
@@ -17,8 +23,5 @@
       </div>
 
     </div> 
-
   
-  
-    
   {% endblock %}
