--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -4,7 +4,7 @@
         <a class="navbar-brand" href=" {{ path('home') }} "><img style="max-height: 46px !important;" src="{{ asset('/img/custom/logos/' ~ app.user.personalization.imageName) }}"/></a>
     {% endif %}
     {% if app.user == false %}
-        <a class="navbar-brand" href=" {{ path('home') }} ">Logo</a>
+        <a class="navbar-brand" href=" {{ path('home') }} "><img style="max-height: 46px !important;" src="{{ asset('/img/custom/logos/default/logo-default.png') }}"/></a>
     {% endif %}
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,17 +12,19 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     {% if app.user %}
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('dashboard') }}">Tableau de bord<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{ path('survey') }}">Questionnaires<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('survey') }}">Formulaires<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="{{ path('personalization') }}">Personnalisation<span class="sr-only">(current)</span></a>
             </li>
         </ul>
+        {% endif %}
         {% if app.user %}
             <ul class="navbar-nav">
                 <li class="nav-item  active">
@@ -30,13 +32,13 @@
                 </li>
             </ul>
         {% endif %}
-        {% if app.user == false %}
+        {# {% if app.user == false %}
         <ul class="navbar-nav">
             <li class="nav-item  active">
                 <a href="{{ path('login') }}" class="nav-link">Se connecter</a>
             </li>
         </ul>
-    {% endif %}
+    {% endif %} #}
     </div>
 </nav>
 
