Add modification in style contents and  gunplay_font

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mt-6 pt-4">
-    <div class="h-80vh d-flex justify-content-center align-items-center" >
+    <div class="d-flex justify-content-center align-items-center" >
         {{ form_start(registrationForm) }}
             <h1>Inscription</h1>
             {{ form_row(registrationForm.email, { 'attr': {'class': "span12",
