--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,16 @@
-
-.h-80vh{
+@font-face{
+    font-family:'gunplay';
+    src:url("../fonts/gunplay.ttf")
+}
+/* .h-80vh{
     height: 80vh;
+} */
+.min_heigth{
+    height: calc(100vh - 72px);
+}
+.cwa_link{
+    font-family: gunplay;
+    font-size: 1.2em;
 }
 
 /***LOGIN_FORM****/
@@ -27,6 +37,7 @@
     line-height: 52.5px;
     vertical-align: middle;
     box-shadow: 10px 10px 10px rgba(13,88,99, 0.1);
+    overflow: hidden;
 }
 .btn_add_survey:hover{
     line-height: 49px;
