--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        
-        {% block stylesheets %}
-            <link href="{{ asset('/css/style.css') }}" rel="stylesheet" />
-            {% if app.user == false %}
-                <style>
-                .color_theme{
-                    background: #000000 !important;
-                }
-                </style>
-            {% endif %}
-            {% if app.user and  app.user.personalization != null %}
-                <style>
-                .color_theme{
-                    background: {{ app.user.personalization.color }} !important;
-                }
-                </style>
-            {% endif %}
-             
-        {% endblock %}
-        
-    </head>
-    <body>
-        <div class="clearfix">
-            {% include 'partials/header.html.twig' %}
- 
-            {% block body %}{% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Creative Form{% endblock %}
+		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-            {% block javascripts %}
-                    <script src="{{ asset('/js/main.js') }}"></script>
-            {% endblock %}
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-            
-        </div>
-    </body>
+		{% block stylesheets %}
+			<link href="{{ asset('/css/style.css') }}" rel="stylesheet"/>
+			{% if app.user == false %}
+				<style>
+					.color_theme {
+						background: #000000 !important;
+						border-color: #363636;
+					}
+					.color_text_theme {
+						color: white;
+					}
+				</style>
+			{% endif %}
+			{% if app.user and  app.user.personalization != null %}
+				<style>
+					.color_theme {
+						background: {{app.user.personalization.color}}
+						!important;
+					}
+					.color_text_theme {
+						color: white;
+					}
+				</style>
+			{% endif %}
+
+		{% endblock %}
+
+	</head>
+	<body>
+
+		<div class="clearfix">
+			{% include 'partials/header.html.twig' %}
+
+			<div class="min_heigth">
+				{% block body %}{% endblock %}
+			</div> 
+			
+
+			{% include 'partials/footer.html.twig' %}
+
+			{% block javascripts %}
+				<script src="{{ asset('/js/main.js') }}"></script>
+			{% endblock %}
+
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+		</div>
+	</body>
 </html>
+
