--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="{{ path('dashboard') }}">Tableau de bord<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{ path('survey') }}">Formulaires<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('surveys') }}">Formulaires<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="{{ path('personalization') }}">Personnalisation<span class="sr-only">(current)</span></a>
