--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,10 +10,9 @@
             {{ form_row(registrationForm.email, { 'attr': {'class': "span12",
     'placeholder': 'toto@exemple.com'} } ) }}
             {{ form_row(registrationForm.plainPassword, { 'attr': {'class': "span12",
-    'placeholder': 'Mots de passe de 6 caractères minimum'} } ) }}
+    'placeholder': 'Mot de passe de 6 caractères minimum'} } ) }}
             {{ form_row(registrationForm.agreeTerms) }}
             <div class="form-group d-flex justify-content-center">
-
                 <button class="btn btn-info">Inscription</button>
             </div> 
         {{ form_end(registrationForm) }}
