--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
 				</div>
 				<div class="form-group">
 					<label for="exampleInputPassword1">Mots de passe</label>
-					<input type="password" placeholder="Entrer votre mots de passe" name="_password" class="form-control span12" id="exampleInputPassword1">
+					<input type="password" placeholder="Entrez votre mots de passe" name="_password" class="form-control span12" id="exampleInputPassword1">
 				</div>
             <input type="hidden" name="go_to" value="{{ path('dashboard') }}"/>
             <input type="hidden" name="back_to" value="{{ path('forgot_password') }}"/>
