--- a/templates/survey/index.html.twig
+++ b/templates/survey/index.html.twig
@@ -1,29 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Questionnaire{% endblock %}
+{% block title %} {{ current_survey.name }} {% endblock %}
 
-  {% block body %}
-  <div class="container pt-5">
-       <h3>Liste des questionnaires</h3>
-
-      {% if surveys|length > 0 %}
-      
-        {% for survey in surveys %}
-            <div class="section_display d-flex justify-content-between  align-items-center" >
-             <div>
-              <p>{{ survey.name }} </p>
-             </div>
-              <div>
-              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
-              <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" ><i class="fa fa-plus" style="font-size:24px;color:green;margin-left:1em;"></i> </a>
-              <a href="{{ path( 'show_survey_page',{'id': survey.id})}}" ><i class="fa fa-eye" style="font-size:24px;color:grey;margin-left:1em;"></i></a>
-              </div>
+{% block body %}
+<div class="container pt-5">
+    <h3>{{ current_survey.name }}</h3>
+    {% for field_survey in current_survey.fieldSurveys %}
+     <div class="section_display d-flex justify-content-between  align-items-center" >
+        <div>
+         <p>{{ field_survey.question }} ?</p>
+        </div>
+            <div>
+                <a href="{{ path( 'delete_field',{'id': field_survey.id} )}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
             </div>
-           
-        {% endfor %}
-      {% endif %}
-   
-      <a href="{{ path('create_survey_page')}}" id="btn_add_survey" class="btn btn-info color_theme btn_add_survey">+</a>
-      
-  </div>
-  {% endblock %}
+        </div>
+
+    {% endfor %}
+    
+    <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" id="btn_add_field_survey" class="btn btn-info color_theme btn_add_survey">+</a>
+    {# <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" class="btn btn-info btn_add_survey"><i class="fa fa-plus" style="font-size:36px;font-weight:500"></i></a> #}
+    
+
+</div>   
+{% endblock %}
