--- a/templates/survey/show.html.twig
+++ b/templates/survey/show.html.twig
@@ -1,24 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ current_survey.name }} {% endblock %}
+{% block title %}Questionnaire{% endblock %}
 
-{% block body %}
-<div class="container pt-5">
-    {% for field_survey in current_survey.fieldSurveys %}
-     <div class="section_display d-flex justify-content-between  align-items-center" >
-        <div>
-         <p>{{ field_survey.question }} ?</p>
-        </div>
-            <div>
-                <a href="{{ path( 'delete_field',{'id': field_survey.id} )}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
+  {% block body %}
+  <div class="container pt-5">
+       <h3>Liste des questionnaires</h3>
+
+      {% if surveys|length > 0 %}
+      
+        {% for survey in surveys %}
+            <div class="section_display d-flex justify-content-between  align-items-center" >
+             <div>
+              <p>{{ survey.name }} </p>
+             </div>
+              <div>
+              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
+              <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" ><i class="fa fa-plus" data-toggle="tooltip" data-placement="top" title="Ajouter une autre question au formulaire" style="font-size:24px;color:green;margin-left:1em;"></i> </a>
+              <a href="{{ path( 'survey',{'id': survey.id})}}" ><i class="fa fa-eye"  data-placement="top" title="Voir l'ensemble question du formulaire"  style="font-size:24px;color:grey;margin-left:1em;"></i></a>
+              </div>
             </div>
-        </div>
-
-    {% endfor %}
-    
-    <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" id="btn_add_field_survey" class="btn btn-info color_theme btn_add_survey">+</a>
-    {# <a href="{{ path( 'edit_survey_page',{'id': current_survey.id} )}}" class="btn btn-info btn_add_survey"><i class="fa fa-plus" style="font-size:36px;font-weight:500"></i></a> #}
-    
-
-</div>   
-{% endblock %}
+           
+        {% endfor %}
+      {% endif %}
+   
+      <a href="{{ path('create_survey_page')}}" id="btn_add_survey" class="btn btn-info color_theme btn_add_survey">+</a>
+      
+  </div>
+  {% endblock %}
