--- a/templates/pages/dashboard.html.twig
+++ b/templates/pages/dashboard.html.twig
@@ -4,8 +4,8 @@
   {% block body %}
    <div class="container pt-5">
 
-      <h3>BIENVENUE SUR VOTRE PLATEFORME DE CREATION DE FORMULAIRE !</h3>
-      <a href="{{ path('create_survey_page')}}" class="btn_creation"> Créer un formulaire</a>
+      <h3>Bienvenue sur votre plateforme de création de formulaire !</h3>
+      <a href="{{ path('create_survey_page')}}" class="btn_creation color_theme"> Créer un formulaire</a>
 
     </div>
   {% endblock %}
