--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -5,8 +5,9 @@
 
 			<div class="col-md-6 mt-md-0 mt-3">
 
-				<h5 class="text-uppercase">Footer Content</h5>
-				<p>Here you can use rows and columns to organize your footer content.</p>
+				<h5 class="text-uppercase mb-2"><span class="cwa_link" >CWA</span> formulaire</h5>
+				<p class="mb-0">Créez autant de formulaire que vous souhaitez</p>
+				<p>C’est SIMPLE, RAPIDE et GRATUIT</p>
 			</div>
 
 			<hr class="clearfix w-100 d-md-none pb-3">
@@ -32,7 +33,7 @@
 	</div>
 
 	<div class="footer-copyright text-center py-3">© 2020 Copyright:
-		<a class="color_text_theme" href="https://mdbootstrap.com/education/bootstrap/">
+		<a class="color_text_theme" href="https://www.agence-cwa.com/">
 			Agence
 			<span class="cwa_link color_text_theme">CWA</span>
 		</a>
