--- a/templates/survey/form.html.twig
+++ b/templates/survey/form.html.twig
@@ -4,7 +4,7 @@
 
  {% block body %}
    <div class="container pt-5">
-      <h3>Formulaire de création de questionnaire</h3>
+      <h3>Nouveau formulaire</h3>
 
       <div class="contaire">
          {{ include('partials/_form.html.twig',  {'button_label': 'Créer'}) }}
