--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,32 +2,36 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="{{asset('/img/custom/logos/default/cropped-favicon-black-32x32.png')}}" id="light-scheme-icon" sizes="32x32">
+		<link rel="icon" href="{{asset('/img/custom/logos/default/cropped-favicon-white-32x32.png')}}" id="light-scheme-icon" sizes="32x32">
+	
 		<title>
-			{% block title %}Creative Form{% endblock %}
+			{% block title %}CWA Formulaire{% endblock %}
 		</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 		{% block stylesheets %}
 			<link href="{{ asset('/css/style.css') }}" rel="stylesheet"/>
-			{% if app.user == false %}
+		
+			{% if app.user == false and app.request.get('_route') != 'questionnaire' %}
 				<style>
 					.color_theme {
 						background: #000000 !important;
 						border-color: #363636;
-					}
+					} 
 					.color_text_theme {
 						color: white;
 					}
 				</style>
 			{% endif %}
-			{% if app.user and  app.user.personalization != null %}
+			{% if app.user and  app.user.personalization != null or app.request.get('_route') == 'questionnaire'  %}
 				<style>
 					.color_theme {
-						background: {{app.user.personalization.color}}
-						!important;
+						background: {{ app.user ? app.user.personalization.color : personalization.color}} !important;
 					}
 					.color_text_theme {
 						color: white;
