--- a/templates/front_survey/front_survey.html.twig
+++ b/templates/front_survey/front_survey.html.twig
@@ -4,20 +4,20 @@
 {% block body %}
 
     {% for message in app.flashes('thanksMessage') %}
-        <div class="flash-message alert alert-success">
+        <div class="flash-message alert alert-success" role="alert">
             {{ message }}
         </div>
     {% endfor %}
 
     {% for message in app.flashes('messageError') %}
-        <div class="flash-message alert alert-danger">
+        <div class="flash-message alert alert-danger role="alert"">
             {{ message }}
         </div>
     {% endfor %}
 
     <div class="container pt-5 d-flex p-2">
     
-     <form id="login_reply" action="{{ path('questionnaire', {'id': survey.id}) }}" method="post">
+     <form id="login_reply" action="{{ path('questionnaire', {'hash': survey.hashIdentifier}) }}" method="post">
 
             <div class="form_group">
                 <label for="inputEmail" >Adresse Email</label>
@@ -35,7 +35,7 @@
 
                     {% elseif field.typeReply == 'select' %}
 
-                        <select class="custom-select custom-select-lg mb-3" name="{{ field.id }}" id="{{ field.id }}" multiple size="{{field.associatedValues|length}}">
+                        <select class="custom-select custom-select-lg mb-3" name="{{ field.id ~ "[]" }}" id="{{ field.id }}" multiple size="{{field.associatedValues|length}}">
                              {% for value in field.associatedValues%}
                                 <option value="{{ value }}">{{ value }}</option>
                             {% endfor %}
