--- a/templates/survey/show.html.twig
+++ b/templates/survey/show.html.twig
@@ -14,9 +14,9 @@
               <p>{{ survey.name }} </p>
              </div>
               <div>
-              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" ><i class="fa fa-trash-o" style="font-size:24px;color:red;margin-left:1em;"></i></a>
+              <a href="{{ path( 'delete_survey_page',{'id': survey.id})}}" ><i class="fa fa-trash-o"  data-toggle="tooltip" data-placement="top" title="Supprimer le formulaire" style="font-size:24px;color:red;margin-left:1em;"></i></a>
               <a href="{{ path( 'edit_survey_page',{'id': survey.id})}}" ><i class="fa fa-plus" data-toggle="tooltip" data-placement="top" title="Ajouter une autre question au formulaire" style="font-size:24px;color:green;margin-left:1em;"></i> </a>
-              <a href="{{ path( 'survey',{'id': survey.id})}}" ><i class="fa fa-eye"  data-placement="top" title="Voir l'ensemble question du formulaire"  style="font-size:24px;color:grey;margin-left:1em;"></i></a>
+              <a href="{{ path( 'survey',{'id': survey.id})}}" ><i class="fa fa-eye"  data-placement="top" title="Voir l'ensemble des questions du formulaire"  style="font-size:24px;color:grey;margin-left:1em;"></i></a>
               </div>
             </div>
            
